# codal-mbedos

./: CMakeLists.txt  create_codal_target.py
BRAINPAD/inc/: mbed_config.h
BRAINPAD/inc/drivers/: MbedCRC.h  Ticker.h
BRAINPAD/inc/hal/: static_pinmap.h
BRAINPAD/inc/platform/: Callback.h  mbed_atomic.h
BRAINPAD/inc/targets/TARGET_STM/TARGET_STM32L4/STM32Cube_FW/CMSIS/: stm32l4xx.h
BRAINPADPULSE/inc/: mbed.h  mbed_config.h
BRAINPADPULSE/inc/mbed-os/targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L452xE/device/: us_ticker_data.h
BRAINPADPULSE/inc/platform/: SingletonPtr.h  platform.h
BRAINPADPULSE/inc/storage/: tmp.h
BRAINPADPULSE/inc/targets/TARGET_STM/: mbed_rtx.h
BRAINPADPULSE/inc/targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L452xE/TARGET_NUCLEO_L452RE_P/: PinNames.h
BRAINPADPULSE/inc/targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L452xE/device/: hal_tick.h
BRAINPADPULSE/inc/targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L476xG/TARGET_NUCLEO_L476RG/: PinNames.h
source/: MbedSerial.cpp
source/mbed-os/targets/TARGET_STM/: mbed_rtx.h
